package app.Entities;

public class ConstructionWood
{
}
