package app.Entities;

public class Order
{
}
