package app.Entities;

public class RoofCovering
{
}
