package app.entities;

public enum RoofType
{
    FLAT, RISEN;

    RoofType getRoofType()
    {
        return this;
    }
}
