package app.services;

import app.exceptions.DatabaseException;

public class SendGrid
{
    public static String requestChangeEmail(int orderId, String message) throws DatabaseException
    {
        return null;
    }

}
